# github___gh-aw-mcpg

./: AGENTS.md  CONTRIBUTING.md  Makefile  README.md  config.example-payload-threshold.toml  config.example.toml  config.toml  example-http-config.json  go.mod  go.sum  main.go  main_test.go  run.sh  run_containerized.sh  version.go
.devcontainer/: Dockerfile  devcontainer.json
.github/agentics/: language-support-tester.md  large-payload-tester.md  nightly-docs-reconciler.md  nightly-workflow-compiler.md
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json  create-agentic-workflow.md  create-shared-agentic-workflow.md  debug-agentic-workflow.md  github-agentic-workflows.md  update-agentic-workflow.md  upgrade-agentic-workflows.md
.github/workflows/: agentics-maintenance.yml  ci.yml  container.yml  daily-compliance-checker.lock.yml  daily-compliance-checker.md  go-fan.md  (+71 more)
.review-replies/: reply-3489126560.json  reply-3489126560.md
docs/: AWF_PIPELINE_ENVIRONMENT_VARIABLES.md  CONFIGURATION.md  ENVIRONMENT_VARIABLES.md  GUARD_RESPONSE_LABELING.md  HTTP_BACKEND_SESSION_ID.md  PROXY_MODE.md  RELEASE_NOTES.md  otel-sentry.md
guards/github-guard/rust-guard/: .gitignore  Cargo.toml  README.md  build.sh
guards/github-guard/rust-guard/.cargo/: config.toml
guards/github-guard/rust-guard/src/: lib.rs  permissions.rs  tools.rs
guards/github-guard/rust-guard/src/labels/: README.md  backend.rs  constants.rs  helpers.rs  mod.rs  response_items.rs  response_paths.rs  tool_rules.rs
scripts/: _inject_local_build.py  patch-smoke-local-build.sh
(+548 files in other folders)
