[package]
name = "github-guard"
version = "0.1.0"
edition = "2021"
authors = ["GitHub Guard Project"]
description = "GitHub DIFC Guard for MCP Gateway - Rust Implementation"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Abort on panic to reduce code size
strip = true          # Strip symbols

[profile.dev]
opt-level = 1
